--- a/dev/sass/components/_forms.scss
+++ b/dev/sass/components/_forms.scss
@@ -11,30 +11,7 @@ $input_bg               : #fff;
 // Base style
 // ------------------------------------------------------------------------ //
 
-legend {
-    margin-bottom: $space/2;
-}
-
-// Fix small bullet on Webkit
-// http://goo.gl/WgqfpM
-input[type="password"] {
-    font: small-caption;
-    font-size: 1em;
-}
-
-// Hide input type number spinner
-// http://goo.gl/lcCQgB
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    margin: 0;
-    -webkit-appearance: none;
-}
-
-input[type="number"] {
-    -moz-appearance:textfield;
-}
-
-.form__row {
+.form-row {
     margin-bottom: $space/2;
 }
 
