--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -44,13 +44,7 @@ $medium_landscape   : "screen and (min-width: 48em) and (orientation: landscape)
 
 $large              : "screen and (min-width: 60em)";
 
-$retina             : "only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13/10), only screen and (min-resolution: 120dpi)";
-
-
-
-
-
-
-
-
-
+$retina             : "(-webkit-min-device-pixel-ratio: 1.3), 
+                       (min-resolution: 1.25dppx),
+                       (min-resolution: 120dpi)";
+                       
