--- a/dev/sass/settings/_variables.scss
+++ b/dev/sass/settings/_variables.scss
@@ -44,13 +44,6 @@ $medium_landscape   : "screen and (min-width: 48em) and (orientation: landscape)
 
 $large              : "screen and (min-width: 60em)";
 
-$retina             : "(-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi)";
-
-
-
-
-
-
-
-
-
+$retina             : "(-webkit-min-device-pixel-ratio: 1.3), 
+                       (min-resolution: 1.25dppx),
+                       (min-resolution: 120dpi)";
