--- a/dev/sass/modules/_pagination.scss
+++ b/dev/sass/modules/_pagination.scss
@@ -2,7 +2,7 @@
 // Config
 // ------------------------------------------------------------------------ //
 
-$pagination_padding         : $space/4 $space/2;
+$pagination_padding         : ($space / 4) ($space / 2);
 
 $pagination_border          : #ddd;
 $pagination_color           : #666;
