--- a/dev/sass/modules/_pagination.scss
+++ b/dev/sass/modules/_pagination.scss
@@ -44,6 +44,7 @@ $pagination_active_bg       : #888;
 
         &.active {
             cursor: default;
+            pointer-events: none;
         }
     }
 }
