add new css class: block-half
close #140

--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -47,6 +47,10 @@ a {
     margin-bottom: $space;
 }
 
+.block-half {
+    margin-bottom: ($space / 2);
+}
+
 .container {
     width: 95%;
     max-width: 960px;
