--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -4,7 +4,7 @@
 
 $base_font_size     : 16px;
 $base_line_height   : 1.6em;
-$base_font_family   : sans-serif;
+$base_font_family   : -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
 $space              : $base_line_height;
 
 
@@ -44,7 +44,7 @@ $medium_landscape   : "screen and (min-width: 48em) and (orientation: landscape)
 
 $large              : "screen and (min-width: 64em)";
 
-$retina             : "(-webkit-min-device-pixel-ratio: 1.3), 
+$retina             : "(-webkit-min-device-pixel-ratio: 1.3),
                        (min-resolution: 1.25dppx),
                        (min-resolution: 120dpi)";
-                       
+
