--- a/dev/sass/modules/_buttons.scss
+++ b/dev/sass/modules/_buttons.scss
@@ -8,7 +8,8 @@
 
     }
 
-    &[disabled] {
+    &[disabled],
+    &.disabled {
 
     }
 }
@@ -33,7 +34,8 @@
         outline: none;
     }
 
-    &[disabled] {
+    &[disabled],
+    &.disabled {
         cursor: not-allowed;
         pointer-events: none;
     }
