rename sass module _vertical-center to _flexbox, will be used for all flex helper

--- a/dev/sass/modules/_modules.scss
+++ b/dev/sass/modules/_modules.scss
@@ -1,12 +1,12 @@
 @import "typography";
 @import "table";
 @import "buttons";
+@import "flexbox";
 @import "baze-grid";
 @import "forms";
 @import "breadcrumb";
 @import "pagination";
 @import "media";
-@import "vertical-center";
 @import "responsive-media";
 @import "z-index";
 @import "sticky-footer-container";
