--- a/dev/sass/partial/_helpers.scss
+++ b/dev/sass/partial/_helpers.scss
@@ -84,10 +84,12 @@
     width: 100%;
 }
 
-$gaps: 0, 2, 4, 8, 12, 16, 20, 24;
+$gaps: 0, 2, 4, 8, 12, 16, 20, 24, 32, 36;
 
 @each $gap in $gaps {
     .mb-#{$gap} { margin-bottom: $gap * 1px !important; }
+    .mr-#{$gap} { margin-right: $gap * 1px !important; }
+    .ml-#{$gap} { margin-left: $gap * 1px !important; }
     .p-#{$gap} { padding: $gap * 1px !important; }
 }
 
