add primary color

--- a/dev/sass/partial/_variables.scss
+++ b/dev/sass/partial/_variables.scss
@@ -13,6 +13,7 @@ $space              : $base_line_height;
 // ------------------------------------------------------------------------ //
 
 $palettes: (
+	primary: #0094ed,
     black: #222
 );
 
