--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -31,7 +31,7 @@ html {
 
 body {
     text-decoration-skip: ink;
-    color: $black90;
+    color: $black70;
 }
 
 a {
@@ -61,9 +61,17 @@ button {
 }
 
 .container {
-    width: 95%;
+    width: 92%;
     max-width: 960px;
     margin: 0 auto;
+
+    @media #{$medium} {
+        width: 94%;
+    }
+
+    @media #{$extra_large} {
+        max-width: 1280px;
+    }
 }
 
 // 3 Header
@@ -72,7 +80,18 @@ button {
 
 // 4 Page styles
 // ------------------------------------------------------------------------ //
+.position {
+    @include objDimension(100%,  auto);
+    @include objPos(top,  left);
+    @include fontSize(69);
+    position: relative;
+    color: palette('light-grey');
 
+    &:after {
+        content: '';
+        @include triangle(left, top, bottom, 12px, $black);
+    }
+}
 
 // 5 Footer
 // ------------------------------------------------------------------------ //
